package com.Proyecto.La_Tertulia.model;

import java.time.LocalDate;
import java.util.List;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToMany;
import jakarta.persistence.OneToOne;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Table(name = "factura_compra")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class FacturaCompra {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id_factura")
    private Long id;

    @ManyToOne
    @JoinColumn(name = "id_vendedor", nullable = false, referencedColumnName = "id_usuario")
    private Usuario usuario;

    @OneToOne
    @JoinColumn(name = "id_compra", nullable = false, referencedColumnName = "id_compra")
    private Compra compra;

    @Column(name = "tipo_documentoCliente", nullable = false)
    private String tipoDocumento;

    @Column(name = "numero_documentoCliente", length = 50)
    private Long numeroDocumento;

    @Column(name = "fecha_factura", nullable = false)
    private LocalDate fechaFactura;

    @Column(name = "sub_total", nullable = false)
    private int subTotal;

    @Column(name = "iva", nullable = false)
    private double iva;

    @Column(name = "total_factura", nullable = false)
    private double totalFactura;

}
